<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Advanced settings</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Touchscreen Preference -->
    <string name="category_touchscreen_title">Touchscreen</string>
    <string name="flick_pick_title">Wake Options</string>
    <string name="dt2wake_summary_head">DoubleTap2Wake</string>
    <string name="dt2wake_summary">Double tap the phone, with a good strength, and the screen will turn on.</string>
    <string name="sweep2wake_summary_head">Sweep2Wake</string>
    <string name="sweep2wake_summary">Sweep across screen with a good strength, and the screen will turn on.</string>

    <!-- Sensors Preference -->
    <string name="category_sensors_title">Sensors</string>

    <!-- Proximity Calibration -->
    <string name="proximity_subcat_title">Proximity</string>
    <string name="proximity_calibration_title">Calibration</string>
    <string name="proximity_calibration_summary">Set the calibration value. Higher values mean less sensitivity.</string>
    <string name="pocketdetection_title">Pocket wake protection</string>
    <string name="pocketdetection_summary_head">Pocket detection method</string>
    <string name="pocketdetection_summary">Select which pocket detection method you prefer to use.</string>
    
    <!-- Misc -->
    <string name="category_misc_title">Misc</string>

    <!-- Fast Charge -->
    <string name="fastcharge_title">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable</string>
    <string name="fastcharge_summary">Enable to draw more power when connected to a PC USB port.</string>
</resources>
