<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
                android:title="@string/proximity_subcat_title">
    <!-- Proximity calibration -->
    <ListPreference
                android:key="proximity_calibration"
                android:title="@string/proximity_calibration_title"
                android:summary="@string/proximity_calibration_summary"
                android:entries="@array/proximity_calibration_entries"
                android:entryValues="@array/proximity_calibration_entries_values"
                android:defaultValue="0x0 0xFFFF3C2D" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pocketdetection_title">
            <ListPreference
                android:key="pocketdetection_method"
                android:title="@string/pocketdetection_summary_head"
                android:summary="@string/pocketdetection_summary"
                android:entries="@array/pocketdetection_entries"
                android:entryValues="@array/pocketdetection_entries_values"
                android:defaultValue="1" />
    </PreferenceCategory>
</PreferenceScreen>

